# mcp-flowise

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  smithery.yaml  test_mcp_call_tool_valid.py  test_mcp_handshake.py  utils.py
.github/workflows/: python-pytest.yml
flowise_mcp/: __main__.py  server.py
mcp_flowise/: __main__.py  server_fastmcp.py  server_lowlevel.py  utils.py
tests/: README.md
tests/fixtures/: sample_chatflows.json
tests/integration/: test_flowise_integration.py  test_server_lowlevel.py  test_tool_prediction.py  test_tool_registration_integration.py
tests/unit/: test_chatflow_filters.py  test_server_lowlevel.py  test_server_lowlevel_unit.py  test_utils.py  test_utils_logging.py
