[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-flowise"
version = "0.1.0"
description = "MCP integration with the Flowise API for creating predictions and managing chatflows/assistants"
readme = "README.md"
authors = [
  { name = "Matthew Hand", email = "matthewhandau@gmail.com" }
]
dependencies = [
  "mcp[cli]>=1.2.0",
  "requests>=2.25.0"
]

[project.scripts]
mcp-flowise = "mcp_flowise.__main__:main"
